[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fediverse"
dynamic = ["version"]
description = "A server of Jupyverse servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "David Brochart", email = "david.brochart@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = [ "jupyter" ]

[project.urls]
Homepage = "https://github.com/davidbrochart/fediverse"

[tool.hatch.version]
path = "fediverse/__init__.py"
